[package]
name = "mini-rxtx"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[dependencies]
nb = "0.1.0"
ssmarshal = {version="1.0", default-features=false}
byteorder = { version = "1", default-features = false }
heapless = "0.5"
embedded-hal = "0.2.0"
serde = {version="1.0", default-features = false }
log = {version="0.4",optional=true}
thiserror = {version="1.0", optional=true}

[dev-dependencies]
serde_derive = "1.0"

[features]
std = ["ssmarshal/std","log","thiserror"]
