[package]
name = "mini-rxtx"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
description = "serialization and communications for embedded"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/strawlab/mini-rxtx"

[dependencies]
nb = "1"
ssmarshal = {version="1.0", default-features=false}
byteorder = { version = "1", default-features = false }
heapless = "0.6"
embedded-hal = "0.2.0"
serde = {version="1.0", default-features = false }
log = {version="0.4",optional=true}
thiserror = {version="1.0", optional=true}

[dev-dependencies]
serde_derive = "1.0"

[features]
std = ["ssmarshal/std","log","thiserror"]
